--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,14 @@ body {
 }
 
 h1 {
+    grid-row: 1;
     margin: 0;
     padding: 12px 16px;
     background: #fff;
 }
 
 #map {
+    grid-row: 2;
     width: 100%;
     height: 100%;
     min-height: 0;
