--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto minmax(0, 1fr);
 }
 
 h1 {
@@ -20,5 +21,5 @@ h1 {
     grid-row: 2;
     width: 100%;
     height: 100%;
-    min-height: 0;
+    min-height: 300px;
 }
