--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,45 @@
 html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
 }
 
-body {
-    height: 100vh;
-    display: grid;
-    grid-template-rows: auto minmax(0, 1fr);
-}
-
 h1 {
-    grid-row: 1;
     margin: 0;
     padding: 12px 16px;
     background: #fff;
 }
 
 #map {
-    grid-row: 2;
+    height: 400px;
+    width: 80%;
+    display: inline-block;
+}
+
+#panel {
+    width: 25%;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    line-height: 42px;
+}
+
+.range-slider {
+    width: 55%;
+}
+
+.step {
+    width: 20%;
+}
+
+.step img {
     width: 100%;
-    height: 100%;
-    min-height: 300px;
+}
+
+#forward {
+    float: right;
+}
+
+#reverse {
+    float: left;
 }
