--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1 {
     text-align: center;
     line-height: 42px;
 }
-
+/*the styling for the slider and the buttons in the legend*/
 .range-slider {
     width: 55%;
 }
